[package]
name = "drift-fr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.26.0"
solana-client = "1.13.7"
solana-sdk = "1.13.7"
solana-transaction-status = "1.13.7"
solana-account-decoder = "1.13.7"
drift = { git = "https://github.com/drift-labs/protocol-v2" }
pyth-sdk-solana = "0.7.1"

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
dotenv = "0.15"